--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,10 @@
-Footsies
+<footer>
+    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0"><img src="../media/icon/cc.svg" width="30"></a>
+    <a href="http://webring.xxiivv.com/"><img src="../media/icon/rotonde.svg" width="30"></a>
+    <a href="https://merveilles.town/@neauoire"><img src="../media/icon/merveilles.svg" width="30"></a>
+    <a href="https://github.com/neauoire"><img src="../media/icon/github.png" alt="github" width="30"></a>
+
+
+    <span><a href="about.html">Kyle Stewart</a> © 2021 — <a href="about.html">BY-NC-SA 4.0</a></span>
+
+</footer>
