--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
     <title>{{ site.title }}</title>
   </head>
 
   <body>
 
-    {{ content }}
+    {% include header.html %}
+
+    <main>
+        {{ content }}
+    </main>
+
+    {% include footer.html %}
 
   </body>
 </html>
