--- a/assets/main.css
+++ b/assets/main.css
@@ -1,33 +1,24 @@
-* { margin:0;padding:0;box-sizing:border-box;text-decoration:none;color:#000 }
-body { padding:30px;font-family:serif;font-size:16px } 
-body > * { margin-bottom:30px }
-body > * > * { margin-bottom:30px }
-table td, table th { vertical-align:top;padding:2.5px 5px;text-align:left }
-table td > pre, table th > pre { background:none;padding:0;margin:0 }
-header { float:left;margin:5px 30px 0 0 } 
-nav { margin:0 0 30px } 
-nav ul { padding:0;margin:0 45px 30px 0;float:left } 
-nav ul li { list-style-type:none;white-space:pre } 
-nav ul li a:hover { background:#000;color:#fff } 
-main { max-width:624px;clear:both }
-main figure:first-child img { margin-left:-30px;max-width:calc(100vw - 15px);width:900px }
-main figure > * { margin-bottom:30px }
-main figure figcaption { max-width:400px }
-main h2 { max-width:400px } 
-main h4 { font-style:italic;font-weight:normal;line-height:24px;text-decoration:underline dotted;max-width:400px } 
-main ul, main ol { margin:0 30px 30px 30px }
-main ul ul { margin-bottom:0 }
-main p { line-height:160% } 
-main a:hover, ::selection { background-color:#000;color:#fff;text-decoration:none } 
-main a:before { content:"{" }
-main a:after { content:"}" }
-main a[target="_blank"]:before { content:"[" }
-main a[target="_blank"]:after { content:"]" }
-main q { font-family:serif;font-size:18px;font-style:italic;display:block;max-width:400px } 
-main img, main svg { max-width:100%;display:block;margin:0 0 15px } 
-main pre { overflow:auto;background:#efefef;padding:10px;font-size:80%;margin-bottom:30px;max-height:700px }
-main code { white-space:pre }
-main hr { clear:both; }
-footer { border-top:1.5px solid;padding:30px 0 0 0;clear:both } 
-footer img { margin:0 0 -10px 0;width:30px } 
-footer > * { display:inline-block;margin-right:5px }
+
+nav ul > li {
+    padding: 2rem;
+    display: inline-block;
+}
+nav li {
+    padding-left: 2rem;
+}
+
+main {
+    padding: 2rem;
+
+}
+
+footer {
+    padding: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer img {
+    width: 1.6rem;
+}
